# StarkFinder

./: .gitignore
anon/backend/: Cargo.toml
anon/backend/src/: main.rs
anon/backend/src/libs/: apispec.rs  error.rs  jwt.rs
anon/backend/src/middlewares/: auth.rs
anon/backend/src/routes/: health.rs  register.rs  user.rs
client/app/agent/chat/[id]/: page.tsx
client/app/agent/transaction/[id]/: page.tsx
client/app/api/ask/: helper.ts  route.ts  types.ts
client/app/api/transactions/: route.ts
client/prompts/: prompts.js
